...
    <string name="register">Register</string>
    <string name="delete_trigger">delete trigger</string>
    <string name="searchMenu">Search</string>
    <string name="cartMenu">Cart</string>
    <string name="messageMenu">Message</string>
    <string name="profileMenu">Profile</string>
    <string name="searchEditor">Search something</string>
    <string name="searchButton">searchButton</string>
    <string name="signOutButton">Sign Out</string>
    <string name="chatButton">Chat</string>
    <string name="blacklistButton">Blacklist</string>
    <string name="sendButton">SEND</string>
    <string name="inputHint">input content</string>
    <string name="backwardButton">backward</string>
...
