...
        app:layout_constraintBottom_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView">

        <CheckBox
            android:id="@+id/select_all_box"
            android:layout_width="29dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/selectallbox" />

        <TextView
...
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textStyle="bold" />

        <Button
            android:id="@+id/checkout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/checkoutButton" />

    </LinearLayout>
...
